tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/rawmulti-us.stderr
TOML parse error at line 1, column 22
  |
1 | rawmulti-us = '''null'''
  |                      ^
invalid multiline literal string
